# DRF_TASK

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
drf_task/: db.sqlite3  manage.py
drf_task/apps/api/: serializers.py  urls.py  views.py
drf_task/apps/service/: admin.py  factory.py  models.py
drf_task/apps/service/migrations/: 0001_initial.py
drf_task/drf_task/: asgi.py  settings.py  urls.py  wsgi.py
